@@ -521,30 +521,20 @@ public class CrawlDatum implements WritableComparable<CrawlDatum>, Cloneable {
     }
   }
   
-  public boolean evaluate(String expr) {
-    return evaluate(expr, true, true);
-  }
-  
-  public boolean evaluate(String expr, boolean silent, boolean strict) {
-    if (expr != null) {
-      // Create or retrieve a JexlEngine
-      JexlEngine jexl = new JexlEngine();
-      
-      jexl.setSilent(silent);
-      jexl.setStrict(strict);
-      
-      // Create an expression object and evaluate
-      return evaluate(jexl.createExpression(expr));
-    }
-    
-    return false;
-  }
-  
   public boolean evaluate(Expression expr) {
     if (expr != null) {
       // Create a context and add data
       JexlContext jcontext = new MapContext();
-            
+      
+      // https://issues.apache.org/jira/browse/NUTCH-2229
+      jcontext.set("status", getStatusName(getStatus()));
+      jcontext.set("fetchTime", (long)(getFetchTime()));
+      jcontext.set("modifiedTime", (long)(getModifiedTime()));
+      jcontext.set("retries", getRetriesSinceFetch());
+      jcontext.set("interval", new Integer(getFetchInterval()));
+      jcontext.set("score", getScore());
+      jcontext.set("signature", StringUtil.toHexString(getSignature()));
+      
       // Set metadata variables
       for (Map.Entry<Writable, Writable> entry : getMetaData().entrySet()) {
         Object value = entry.getValue();
@@ -571,7 +561,7 @@ public class CrawlDatum implements WritableComparable<CrawlDatum>, Cloneable {
           } catch (Exception e) {}
         }
       }
-      
+            
       try {
         if (Boolean.TRUE.equals(expr.evaluate(jcontext))) {
           return true;
