@@ -10,6 +10,8 @@ in the release announcement and keep it on top in this CHANGES.txt for the Nutch
 
 Nutch Change Log
 
+* NUTCH-2229 Allow Jexl expressions on CrawlDatum's fixed attributes (markus)
+
 * NUTCH-2227 RegexParseFilter (markus)
 
 * NUTCH-2221 Introduce db.ignore.internal.links to FetcherThread (markus)
